@@ -31,6 +31,7 @@ And also:
 * ZX Spectrum Next
 * Jupiter Ace
 * Amstrad CPC 464, CPC 4128, CPC 664, CPC 6128
+* Amstrad PCW 8256
 * MSX1 
 * Spectravideo 318/328
 * Colecovision
