@@ -8678,6 +8678,7 @@ struct s_machine_family_names family_names[]={
     {MACHINE_FAMILY_ACE,"Jupiter Ace"},
     {MACHINE_FAMILY_Z88,"Z88"},
     {MACHINE_FAMILY_CPC,"CPC"},
+    {MACHINE_FAMILY_PCW,"PCW"},
     {MACHINE_FAMILY_QL,"QL"},
     {MACHINE_FAMILY_MK14,"MK14"},
 
@@ -8707,6 +8708,7 @@ struct s_machine_family machine_family_list[]={
     {MACHINE_ID_CPC_4128,MACHINE_FAMILY_CPC},
     {MACHINE_ID_CPC_664,MACHINE_FAMILY_CPC},
     {MACHINE_ID_CPC_6128,MACHINE_FAMILY_CPC},
+    {MACHINE_ID_PCW_8256,MACHINE_FAMILY_PCW},
     {MACHINE_ID_QL_STANDARD,MACHINE_FAMILY_QL},
     {MACHINE_ID_MK14_STANDARD,MACHINE_FAMILY_MK14},
 
